fixed radio cut off and select dropdown for iphone

--- a/frontend/src/scss/_teach.scss
+++ b/frontend/src/scss/_teach.scss
@@ -46,6 +46,7 @@
     padding-right: 1rem;
     outline: none;
     border: 1px solid $color-black;
+    transform: scale(1);
 
     @include tn {
       width: 20rem;
@@ -75,6 +76,7 @@
       padding-left: 1rem;
       padding-right: 1rem;
       width: 24rem;
+      background-color: rgba(0, 0, 0, 0.05);
       appearance: menulist;
 
       @include tn {
